# dev-cpp

./: CMakeLists.txt  CMakePresets.json  code.cpp  problem_0002.cpp  problem_0011.cpp  problem_0015.cpp  problem_0016.cpp  problem_0045.cpp  problem_0075.cpp  problem_0200.cpp  problem_0300.cpp  problem_0491.cpp
res/: 0049.json
